--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,21 +5,26 @@
 version: '3'
 
 services:
- ##
-  # Pool fontend docker
-  ##
+  #########
+  # Nginx #
+  #########
+
   nginx-pool:
     image: nginx:1.13.7
     container_name: nginx-pool
     restart: unless-stopped
     volumes:
-      - ./volumes/nginx-pool/conf/:/etc/nginx/conf.d/
+      - ./routes/nginx-pool/:/etc/nginx/conf.d/
     ports:
       - 80:80
     networks:
       pool-network:
-        ipv4_address: 172.2.10.2
+        ipv4_address: 172.2.20.2
   
+  #########      
+  # Drops #
+  #########
+
   arise:
     image: vivaconagua/arise:develop
     container_name: arise
@@ -28,29 +33,6 @@ services:
       pool-network:
         ipv4_address: 172.2.50.1
 
-       
-  stream-frontend:
-    image: vivaconagua/stream-frontend:develop
-    container_name: stream-frontend
-    restart: unless-stopped
-    networks:
-      pool-network:
-        ipv4_address: 172.2.50.2
-
-  waves-frontend:
-    image: vivaconagua/waves-frontend:develop
-    container_name: waves-frontend
-    restart: unless-stopped
-    networks:
-      pool-network:
-        ipv4_address: 172.2.50.3
-
-###########
-#
-# backend
-#
-########### 
-   
   drops:
     image: vivaconagua/drops:develop
     container_name: drops
@@ -62,7 +44,34 @@ services:
     networks:
       pool-network:
         ipv4_address: 172.2.100.1
+  
+  drops-database:
+     image: mariadb
+     container_name: drops-database
+     environment: 
+      - MYSQL_DATABASE=drops 
+      - MYSQL_USER=drops
+      - MYSQL_PASSWORD=drops 
+      - MYSQL_ROOT_PASSWORD=yes 
+     restart: unless-stopped
+     volumes: 
+       - ./volumes/drops-database/mysql/:/var/lib/mysql/
+     networks:
+       pool-network:
+         ipv4_address: 172.2.200.1
+  
+  ##########
+  # Stream #
+  ##########
 
+  stream-frontend:
+    image: vivaconagua/stream-frontend:develop
+    container_name: stream-frontend
+    restart: unless-stopped
+    networks:
+      pool-network:
+        ipv4_address: 172.2.50.2
+  
   stream-backend:
     image: vivaconagua/stream-backend:develop
     container_name: stream-backend
@@ -74,6 +83,33 @@ services:
     networks:
       pool-network:
         ipv4_address: 172.2.100.2
+
+  stream-database:
+     image: mariadb
+     container_name: stream-database
+     environment: 
+      - MYSQL_DATABASE=stream 
+      - MYSQL_USER=stream
+      - MYSQL_PASSWORD=stream 
+      - MYSQL_ROOT_PASSWORD=yes 
+     restart: unless-stopped
+     volumes: 
+       - ./volumes/stream-database/mysql/:/var/lib/mysql/
+     networks:
+       pool-network:
+         ipv4_address: 172.2.200.2
+
+  #########
+  # Waves #
+  #########
+
+  waves-frontend:
+    image: vivaconagua/waves-frontend:develop
+    container_name: waves-frontend
+    restart: unless-stopped
+    networks:
+      pool-network:
+        ipv4_address: 172.2.50.3
   
   waves-backend:
     image: vivaconagua/waves-backend:develop
@@ -95,58 +131,6 @@ services:
       pool-network:
         ipv4_address: 172.2.100.3
 
-  dispenser:
-    image: vivaconagua/dispenser:develop
-    container_name: dispenser
-    restart: unless-stopped
-    links:
-      - dispenser-database
-    volumes:
-      - ./volumes/dispenser/application.conf:/opt/docker/conf/application.conf
-      - ./volumes/dispenser/navigations/:/opt/docker/conf/navigation/jsons/
-    networks:
-      pool-network:
-        ipv4_address: 172.2.150.1
-
-  nats:
-    image: nats:1.0.6
-    container_name: pool-nats
-    restart: unless-stopped
-    networks:
-      pool-network:
-        ipv4_address: 172.2.150.2
-  
-  # Database
-  drops-database:
-     image: mariadb
-     container_name: drops-database
-     environment: 
-      - MYSQL_DATABASE=drops 
-      - MYSQL_USER=drops
-      - MYSQL_PASSWORD=drops 
-      - MYSQL_ROOT_PASSWORD=yes 
-     restart: unless-stopped
-     volumes: 
-       - ./volumes/drops-database/mysql/:/var/lib/mysql/
-     networks:
-       pool-network:
-         ipv4_address: 172.2.200.1
-
-  stream-database:
-     image: mariadb
-     container_name: stream-database
-     environment: 
-      - MYSQL_DATABASE=stream 
-      - MYSQL_USER=stream
-      - MYSQL_PASSWORD=stream 
-      - MYSQL_ROOT_PASSWORD=yes 
-     restart: unless-stopped
-     volumes: 
-       - ./volumes/stream-database/mysql/:/var/lib/mysql/
-     networks:
-       pool-network:
-         ipv4_address: 172.2.200.2
-
   waves-database:
      image: mariadb
      #     build: ./waves-database
@@ -165,6 +149,23 @@ services:
        pool-network:
          ipv4_address: 172.2.200.3
 
+  #############
+  # Dispsener #
+  ############# 
+
+  dispenser:
+    image: vivaconagua/dispenser:develop
+    container_name: dispenser
+    restart: unless-stopped
+    links:
+      - dispenser-database
+    volumes:
+      - ./volumes/dispenser/application.conf:/opt/docker/conf/application.conf
+      - ./volumes/dispenser/navigations/:/opt/docker/conf/navigation/jsons/
+    networks:
+      pool-network:
+        ipv4_address: 172.2.100.4
+
   dispenser-database:
     image: mongo
     container_name: dispenser-database
@@ -173,10 +174,23 @@ services:
        - ./volumes/dispenser-database/mongodb/:/data/db/
     networks:
       pool-network:
-        ipv4_address: 172.2.220.1
+        ipv4_address: 172.2.200.4
 
+  ################
+  # Architecture #
+  ################
 
-# start docker in pool-network
+  nats:
+    image: nats:1.0.6
+    container_name: pool-nats
+    restart: unless-stopped
+    networks:
+      pool-network:
+        ipv4_address: 172.2.150.1
+
+################  
+# pool-network #
+################ 
 networks:
   pool-network:
     driver: bridge
