--- a/volumes/dispenser/application.conf
+++ b/volumes/dispenser/application.conf
@@ -24,7 +24,7 @@ http {
         port = 9000
     }
 play.filters.enabled += "play.filters.cors.CORSFilter"
-play.filters.hosts.allowed=["stage.vivaconagua.org", "localhost", "172.2.100.4"]
+play.filters.hosts.allowed=["stage.vivaconagua.org", "172.2.20.2", "172.2.100.4"]
 
 # mustache infos
 
