--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,19 +85,19 @@ services:
         ipv4_address: 172.2.100.2
 
   stream-database:
-     image: mariadb
-     container_name: stream-database
-     environment: 
+    image: mariadb:10.3
+    container_name: stream-database
+    environment: 
       - MYSQL_DATABASE=stream 
       - MYSQL_USER=stream
       - MYSQL_PASSWORD=stream 
       - MYSQL_ROOT_PASSWORD=yes 
-     restart: unless-stopped
-     volumes: 
-       - ./volumes/stream-database/mysql/:/var/lib/mysql/
-     networks:
-       pool-network:
-         ipv4_address: 172.2.200.2
+    restart: unless-stopped
+    volumes: 
+      - ./volumes/stream-database/mysql/:/var/lib/mysql/
+    networks:
+      pool-network:
+        ipv4_address: 172.2.200.2
 
   #########
   # Waves #
@@ -154,7 +154,7 @@ services:
   ############# 
 
   dispenser:
-    image: vivaconagua/dispenser:develop
+    image: vivaconagua/dispenser:latest
     container_name: dispenser
     restart: unless-stopped
     links:
