--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,26 +46,26 @@ services:
         ipv4_address: 172.2.100.1
   
   drops-database:
-     image: mariadb:10.3
-     container_name: drops-database
-     environment: 
+    image: mariadb:10.4
+    container_name: drops-database
+    environment: 
       - MYSQL_DATABASE=drops 
       - MYSQL_USER=drops
       - MYSQL_PASSWORD=drops 
       - MYSQL_ROOT_PASSWORD=yes 
-     restart: unless-stopped
-     volumes: 
-       - ./volumes/drops-database/mysql/:/var/lib/mysql/
-     networks:
-       pool-network:
-         ipv4_address: 172.2.200.1
+    restart: unless-stopped
+    volumes: 
+      - ./volumes/drops-database/mysql/:/var/lib/mysql/
+    networks:
+      pool-network:
+        ipv4_address: 172.2.200.1
   
   ##########
   # Stream #
   ##########
 
   stream-frontend:
-    image: vivaconagua/stream-frontend:develop
+    image: vivaconagua/stream-frontend:stage
     container_name: stream-frontend
     restart: unless-stopped
     networks:
@@ -73,7 +73,7 @@ services:
         ipv4_address: 172.2.50.2
   
   stream-backend:
-    image: vivaconagua/stream-backend:develop
+    image: vivaconagua/stream-backend:stage
     container_name: stream-backend
     restart: unless-stopped
     links:
@@ -85,7 +85,7 @@ services:
         ipv4_address: 172.2.100.2
 
   stream-database:
-    image: mariadb:10.3
+    image: mariadb
     container_name: stream-database
     environment: 
       - MYSQL_DATABASE=stream 
@@ -154,7 +154,7 @@ services:
   ############# 
 
   dispenser:
-    image: vivaconagua/dispenser:latest
+    image: vivaconagua/dispenser:stage
     container_name: dispenser
     restart: unless-stopped
     links:
@@ -187,6 +187,14 @@ services:
     networks:
       pool-network:
         ipv4_address: 172.2.150.1
+
+  redis:
+    image: redis
+    container_name: redis
+    restart: unless-stopped
+    networks:
+      pool-network:
+        ipv4_address: 172.2.150.2
 
 ################  
 # pool-network #
