--- a/volumes/drops/application.conf
+++ b/volumes/drops/application.conf
@@ -49,7 +49,7 @@ silhouette {
   authenticator.secureCookie=false
   authenticator.httpOnlyCookie=true
   authenticator.useFingerprinting=true
-  authenticator.authenticatorIdleTimeout=30 minutes
+  authenticator.authenticatorIdleTimeout=12 hours
   authenticator.authenticatorExpiry=12 hours
 
   authenticator.rememberMe.cookieMaxAge=30 days
