--- a/volumes/stream-backend/application.conf
+++ b/volumes/stream-backend/application.conf
@@ -13,9 +13,9 @@ slick.dbs.default.db.url="jdbc:mysql://172.2.200.2/stream?serverTimezone=UTC"
 slick.dbs.default.db.user = "stream"
 slick.dbs.default.db.password = "stream"
 
-play.evolutions.enabled = true
-play.evolutions.db.default.autoApply = true
-play.evolutions.db.default.autoApplyDowns = true
+play.evolutions.enabled = false
+play.evolutions.db.default.autoApply = false
+play.evolutions.db.default.autoApplyDowns = false
 
 ms.name="STREAM" // example: BLOOB
 ms.host="http://172.2.20.2/backend/stream" // example: http://localhost:9000
